--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
-    <title>Text Glitch Effect | CodingNepal</title>
+    <title>Nadila Sepianti 💚</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <div class="content">
-      <h1 class="text" data-text="Text Glitch">Text Glitch</h1>
+      <h1 class="text" data-text="Text Glitch">Nadila Sepianti🧡</h1>
 </div>
 </body>
 </html>
