--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
   <body>
     <div class="content">
-      <h1 class="text" data-text="Text Glitch">Nadila Sepianti🧡</h1>
+      <h1 class="text" data-text="MhmdSairi 🧡">Nadila Sepianti🧡</h1>
 </div>
 </body>
 </html>
