--- a/index.html
+++ b/index.html
@@ -13,19 +13,19 @@
       <input type="radio" name="slide" id="four">
       <input type="radio" name="slide" id="five">
       <div class="img img-1">
-        <img src="images/img-1.jpg" alt="">
+        <img src="img/img1.jpg" alt="">
       </div>
       <div class="img img-2">
-        <img src="images/img-2.jpg" alt="">
+        <img src="img/img2.jpg" alt="">
       </div>
       <div class="img img-3">
-        <img src="images/img-3.jpg" alt="">
+        <img src="img/img3.jpg" alt="">
       </div>
       <div class="img img-4">
-        <img src="images/img-4.jpg" alt="">
+        <img src="img/img4.jpg" alt="">
       </div>
       <div class="img img-5">
-        <img src="images/img-5.jpg" alt="">
+        <img src="img/img5.jpg" alt="">
       </div>
       <div class="sliders">
         <label for="one" class="one"></label>
