--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <!-- Created By CodingNepal -->
 <html lang="en" dir="ltr">
+  <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-503c0e7c-a994-4a0c-abe0-e98af80c85a6"></div>
   <head>
     <meta charset="utf-8">
     <title>Nadila Sepianti🥰</title>
