--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
       <!-- use cdn for the library / link the library file -->
       <script src="https://cdn.jsdelivr.net/npm/baffle@0.3.6/dist/baffle.min.js"></script>
 <body>
+       <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-503c0e7c-a994-4a0c-abe0-e98af80c85a6"></div>
       <div class="container">
-            <div class="data">codegrid - Design tuts</div>
+            <div class="data">Nadila Sepianti 💛</div>
       </div>
       <script type="text/javascript">
 
