--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
       <meta charset="UTF-8">
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
       <meta http-equiv="X-UA-Compatible" content="ie=edge">
-      <title>Baffle JS Text Reveal</title>
+      <title>💛💛💛💛💛</title>
       <link rel="stylesheet" href="style.css">
 
       <!-- use cdn for the library / link the library file -->
       <script src="https://cdn.jsdelivr.net/npm/baffle@0.3.6/dist/baffle.min.js"></script>
 <body>
       <div class="container">
-            <div class="data">codegrid - Design tuts</div>
+            <div class="data">love you nadila sepianti 🧡</div>
       </div>
       <script type="text/javascript">
 
       const text = baffle(".data");
       text.set({
             characters : '█▓█ ▒░/▒░ █░▒▓/ █▒▒ ▓▒▓/█ ░█▒/ ▒▓░ █<░▒ ▓/░>',
-            speed: 120
+            speed: 250
       });
       text.start();
       text.reveal(4000);
