--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
       <!-- use cdn for the library / link the library file -->
       <script src="https://cdn.jsdelivr.net/npm/baffle@0.3.6/dist/baffle.min.js"></script>
 <body>
+      <script src="https://apps.elfsight.com/p/platform.js" defer></script>
+<div class="elfsight-app-85d6e5d8-9c4a-4b11-ac1b-7626f440c58c"></div>
       <div class="container">
             <div class="data">love you nadila sepianti 🧡</div>
       </div>
