--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <script src="https://apps.elfsight.com/p/platform.js" defer></script>
 <div class="elfsight-app-85d6e5d8-9c4a-4b11-ac1b-7626f440c58c"></div>
       <div class="container">
-            <div class="data">love you nadila sepianti 🧡</div>
+            <div class="data">LOVE YOU NADILA SEPIANTI 🧡</div>
       </div>
       <script type="text/javascript">
 
